# system_monitor

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  release.yml  rust.yml  security.yml
experiments/: .gitignore
experiments/leaks/: Makefile  benchmark.sh  bursty_leak.c  control_workload.c  cpu_spiky_stable_mem.c  eval.sh  generate_dataset.sh  noisy_leak.c  prepare_train_valid_test_datasets.sh  run_id.c  run_id.h  staircase_leak.c  steady_leak.c  subtle_leak.c  train.sh
experiments/ml-trainer/: Cargo.toml  README.md
experiments/ml-trainer/src/: dataset.rs  features.rs  main.rs  model_rf.rs
src/: lib.rs  main.rs
src/anomaly/: dataset.rs  eval.rs  mod.rs  model_rf.rs
src/app/: anomaly_train.rs  args.rs  factory.rs  logging.rs  mod.rs  one_shot.rs  output.rs  worker.rs
src/app/gui/: app.rs  backend.rs  mod.rs  runtime.rs  settings_store.rs  state.rs
src/collections/: mod.rs
src/dto/: mod.rs  process_dtos.rs  process_hierarchy_dtos.rs  process_network_dtos.rs  thread_dtos.rs
src/model/: cpu_usage_result_model.rs  jiffy_usage_model.rs  mod.rs  process_hierarchy_model.rs  process_status_model.rs  status_model.rs  system_status_model.rs  thread_stat_info_model.rs
src/model/network/: mod.rs  network_enums.rs  (+5 more)
src/monitor/: monitor.rs
src/parser/: mod.rs  network_parser.rs  parser.rs  process_parser.rs  thread_parser.rs
src/process/: mod.rs  process.rs  process_control.rs
src/state/: state.rs
src/storage/: accumulator.rs  mod.rs  sink.rs  sqlite_sink.rs  types.rs
src/thread/: thread.rs
src/util/: mod.rs  parser_utils.rs  process_control_error.rs  types.rs
(+24 files in other folders)
