[package]
name = "system-monitor"
version = "0.2.2"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
csv = "1.4"
smartcore = "0.4"
dioxus = { version = "0.7", optional = true, features = ["desktop"] }
dioxus-desktop = { version = "0.7", optional = true }
native-tls = { version = "0.2", optional = true, features = ["vendored"] }
futures-timer = { version = "3", optional = true }
plotters = { version = "0.3", optional = true }

[dependencies.rusqlite]
version = "0.39.0"
features = [ "bundled" ]

[dependencies.uuid]
version = "1.23.0"
features = [ "v4" ]

[features]
default = []
dioxus-gui = ["dep:dioxus", "dep:dioxus-desktop", "dep:native-tls", "dep:futures-timer", "dep:plotters"]
